--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,21 +15,22 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Java 7 WatchService for Clojure</h1>
-        <p class="header">Thin wrapper around Java 7's WatchService for Clojure</p>
+        <h1>Java 7 WatchService for Clojure</h1>
+        <p>Thin wrapper around Java 7's WatchService for Clojure</p>
+
+        <p class="view"><a href="https://github.com/klauern/java7-watcher.clj">View the Project on GitHub <small>klauern/java7-watcher.clj</small></a></p>
+
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/klauern/java7-watcher.clj/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/klauern/java7-watcher.clj/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/klauern/java7-watcher.clj">View On GitHub</a></li>
+          <li><a href="https://github.com/klauern/java7-watcher.clj/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/klauern/java7-watcher.clj/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/klauern/java7-watcher.clj">View On <strong>GitHub</strong></a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/klauern">klauern</a></p>
-
-
       </header>
       <section>
         <h1>java7-watcher.clj</h1>
+
+<p><a href="http://travis-ci.org/klauern/java7-watcher.clj"><img src="https://secure.travis-ci.org/klauern/java7-watcher.clj.png" alt="Build Status"></a></p>
 
 <p>Stupidly simple java7 file watch service.  This is largely a Clojure-ified wrapper around <a href="http://docs.oracle.com/javase/tutorial/essential/io/notification.html">Java7's WatchService</a>, which works natively on Windows and Linux, but not entirely on OSX.  Don't use this if you run a Mac since OS X <a href="http://stackoverflow.com/a/11182515/7008">has no native file watching service</a>, but rather uses a poll-based approach.</p>
 
@@ -129,11 +129,12 @@ to write their own handlers or start/stop handlers)</li>
 <p>Distributed under the Eclipse Public License, the same as Clojure.</p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p>This project is maintained by <a href="https://github.com/klauern">klauern</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		          <script type="text/javascript">
+    <script src="javascripts/scale.fix.js"></script>
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
